descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2024-XX-XX  Release X.XX.X                                     ---
----------------------------------------------------------------------

* fixed primitive & matrix edit GUIs in MGED ("x -1") - Sean Morrison
* added (align, dir and print) subcommands to 'view' - Chris McGregor
* added (autoview, lookat, saveview) to 'view' - Chris McGregor
* fixed mged 'process' command on read-only databases - Sean Morrison
* fixed -exec behavior with 'flat' search in mged - Chris McGregor


----------------------------------------------------------------------
--- 2024-09-24 Release 7.40.2                                      ---
----------------------------------------------------------------------

* various manpage and help text updates - Josh Baker
* improved gist -F default behavior - Chris McGregor
* fixed gist crashing with halfspaces in component - Chris McGregor
* fixed lint BoT check testing - Cliff Yapp
* improved overlap checker dialog behavior - Chris McGregor
* fixed rtwizard tree visuals in gist - Chris McGregor


----------------------------------------------------------------------
--- 2024-08-16  Release 7.40.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD improves the robustness of the facetize
command.  Building on work begun in 7.38.0, for the first time BRL-CAD
is able to successfully facetize all of BRL-CAD's example geometries.
This involves a major change to the processing pipeline of the
facetize command, allowing handling of individual primitives to be
fault tolerant and automatically attempting fallback methods.
Historically BRL-CAD facetize has attempted to produce output meshes
even when individual operations fail by silently skipping over failing