@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2024-XX-XX  Release X.XX.X                                     ---
 ----------------------------------------------------------------------
 
+* added bb '-m' option for outputting midpoint - Chris McGregor
 * fixed primitive & matrix edit GUIs in MGED ("x -1") - Sean Morrison
 * added (align, dir and print) subcommands to 'view' - Chris McGregor
 * added (autoview, lookat, saveview) to 'view' - Chris McGregor
